kubernetes/apps/hydra/vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    pod-security.kubernetes.io/enforce: restricted
