kubernetes/apps/hydra/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  serviceName: vaultwarden
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: vaultwarden
      annotations:
        kubernetes.io/egress-bandwidth: "5M"
        kubernetes.io/ingress-bandwidth: "1M"
    spec:
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.37.4 # {"$imagepolicy": "vaultwarden:vaultwarden"}
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
            initialDelaySeconds: 5
          volumeMounts:
            - name: vaultwarden
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: vaultwarden
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: 'longhorn'
        resources:
          requests:
            storage: 2Gi
